# order-form-extraction

./: .gitignore  README.md  extract_orders.py  image_preprocessing.py  image_reader.py  plotting.py  pyproject.toml  table_detector.py
craft-trocr/: craft_ocr_flow.py  craft_ocr_test.ipynb  trocr_approach.ipynb
doctr/: doctr_approach.ipynb  doctr_extract_orders.py  doctr_flow.py
models/: detected_table.py  detection_model_output.py  general_ocr_parser.py
readers/: image_reader.py
scripts/: extract_orders.py  pdf_to_images.py
tables/: table_cropper.py  table_detector.py  table_parser.py
utils/: image_preprocessing.py  max_resize.py  plotting.py  post_processing.py
