[project]
name = "order-form-extraction"
version = "0.1.0"
description = "Try-out for handwritten order form extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "matplotlib>=3.10.1",
    "mplcursors>=0.6",
    "pathlib>=1.0.1",
    "pillow>=11.1.0",
    "python-doctr>=0.11.0",
    "ruff>=0.9.10",
    "symspellpy>=6.7.8",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
]

# PyTorch seems to have changed their default index
#[[tool.uv.index]]
#name = "pytorch-cu124"
#url = "https://download.pytorch.org/whl/cu124"
#explicit = true
#
#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
#]
#torchvision = [
#  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
#]